# System

1/FIleManagementSystem1.0/: CMakeLists.txt  ai_assistant.py  filesystem_data.json
2/daima/FileSystem_Final5/: file_system.py  main_window.py  run.py
2/daima/FileSystem_Python0/: file_system.py  filesystem_data.json  main_window.py
2/daima/FileSystem_Python1/: file_system.py  filesystem_data.json  main_window.py
2/daima/FileSystem_Python21/: file_system.py  filesystem_data.json  main_window.py
2/daima/FileSystem_Python22/: file_system.py  filesystem_data.json  main_window.py
2/daima/FileSystem_Python3/: file_system.py  main_window.py
2/daima/FileSystem_Pythonq4/: main_window.py  run.py
FileManagementSystem1.0/: main_window.py.bak  run.py
System1.0/: file_system.py  main_window.py
System2.0/: filesystem_data.json
System3.0/: ai_assistant.py
System4.0/: ai_dialog.py  ai_service.py  filesystem_data.json  main_window.py  run.py
System5.0/: ai_integration.py  ai_service.py  filesystem_data.json  run.py
System6.0/: ai_integration.py  ai_service.py  filesystem_data.json  run.py
